Adding side bar to right in user app

--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -16,7 +16,17 @@
 	font-weight:bold;
 }
 .mainArea {
+	md-stepper: {
+		flex:0 !important;
+	}
 	height: 100%;
+	.right-stat {
+		display: flex;
+	    order: 2;
+	    width: 240px;
+	    overflow: hidden;
+	    position:relative;
+	}
 }
 footer {
   background-color: #f2f8f8;
