--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -13,6 +13,12 @@
             </div>      
         </div>
     </div>
+    <div class="right-stat" ng-if="!isBroker">
+        <img style="width:250px;height:100%" src="/assets/images/sidebar-background.png">
+        <div style="position:absolute;right:0;left:0;top:0;bottom: 0;">
+            <progress-display is-vertical="true"/>   
+        </div>
+    </div>
     <div flex layout="column">
     <md-stepper id="stepper-demo" md-linear="!isBroker">
         <div ng-if="isBroker">
