--- a/src/assets/styles/sass/index.scss
+++ b/src/assets/styles/sass/index.scss
@@ -64,6 +64,12 @@ table {
     text-decoration: none;
 }
 
+.legend.vertical
+{
+  color: white;
+  flex-flow:column;
+  padding-left: 54px;
+}
 kyc-form form, profile-form form{
    display: flex;
    flex-flow: row wrap;
