Fixes for width of chart

--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -14,8 +14,8 @@
         </div>
     </div>
     <div class="right-stat" ng-if="!isBroker">
-        <img style="width:250px;height:100%" src="/assets/images/sidebar-background.png">
-        <div style="position:absolute;right:0;left:0;top:0;bottom: 0;">
+        <img style="width:250px;height:100%;position: absolute;" src="/assets/images/sidebar-background.png">
+        <div style="position:absolute;">
             <progress-display is-vertical="true"/>   
         </div>
     </div>
