--- a/src/app/components/main/navigation/navigation.html
+++ b/src/app/components/main/navigation/navigation.html
@@ -19,7 +19,7 @@
 		<img class="icon-active" src="/assets/images/messages-active.png" alt="">
 		Messages
 	</a>
-	<a ui-sref-active="active" ui-sref="main.document">
+	<a ui-sref-active="active" ui-sref="main.document" ng-if="!isBroker">
 		<img class="icon" src="/assets/images/documents.png" alt="">
 		<img class="icon-active" src="/assets/images/documents-active.png" alt="">
 		Documents
