--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -21,6 +21,20 @@
 	    width: 240px;
 	    overflow: hidden;
 	    position:relative;
+	    .contact-brokerage
+	    {
+	    	margin-top: 20px;
+	    	input {
+				height: 45px;
+			    padding-left: 10px;
+			    font-size: 14px;
+			    border-radius: 3px;
+			    width: 100%;
+			    margin: 10px;
+			    border: none;	
+			    margin-left: 0;
+			}
+	    }
 	}
 }
 footer {
