message view ui

--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -247,5 +247,18 @@
                 <!-- <md-event-calendar-today></md-event-calendar-today> -->
             </md-event-calendar-header>
         </md-event-calendar>
+        <h2 style="color: white;margin: 20px; margin-bottom: 0px;">Messages</h2>
+        <div class="msg-requests left">
+            Hi, I need an appointment regarding my application. Kindly do the needful.
+            <span class="datetime">20th Oct 2016, 07:15am</span>
+        </div>
+        <div class="msg-requests right">
+            Let me see, what can I do about this.
+            <span class="datetime">20th Oct 2016, 07:15am</span>
+        </div>
+        <div class="msg-requests left">
+            Yeah, sure. Thanks.
+            <span class="datetime">20th Oct 2016, 07:15am</span>
+        </div>
     </div>
 </div>
