--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -129,7 +129,7 @@
                 <md-step-body layout="row" layout-wrap>
                     <h3 class="partnersHeader">Premium Partners</h3>
                     <div ng-repeat="partner in ::vm.partners | filter:{brokerageCategory:'PREMIUM'}" ng-class="{'centerAlign': vm.premiumPartnersCount}">
-                        <div class="partnerLogo" ng-click="vm.toggleSelected(partner)" ng-class="{'selected': partner.selected }">
+                        <div class="partnerLogo" ng-click="vm.toggleSelected(partner)" ng-class="{'selected': partner.selected , 'deactivated': partner.status}">
                             <img class="premiereIcon" src="/assets/images/premiere.png"/>
                             <center><img ng-src="{{partner.img}}"/></center>
                         </div>
@@ -137,7 +137,7 @@
 
                     <h3 class="partnersHeader">All Partners</h3>
                     <div ng-repeat="partner in ::vm.partners | filter:{brokerageCategory:'REGULAR'}">
-                        <div class="partnerLogo" ng-click="vm.toggleSelected(partner)" ng-class="{'selected': partner.selected }">
+                        <div class="partnerLogo" ng-click="vm.toggleSelected(partner)" ng-class="{'selected': partner.selected , 'deactivated': partner.status}">
                             <center><img ng-src="{{partner.img}}"/></center>
                         </div>
                     </div>
@@ -226,7 +226,11 @@
         <footer>
             <div layout="row" class="footerBtns" layout-align="start center" ng-if="!isBroker">
                 <md-button class="md-raised md-back" ng-click="vm.backStep()" ng-show="vm.activeStep>1">Back</md-button>
-                <md-button class="md-raised md-success" ng-click="vm.nextStep()" ng-disabled="(vm.activeStep==5 && !vm.timeslotSelected) || (vm.activeStep==1 && selectedPartners.size<1)">
+                <md-button ng-if="!isBroker" class="md-raised md-success" ng-click="vm.nextStep()" ng-disabled="(vm.activeStep==5 && !vm.timeslotSelected) || (vm.activeStep==1 && selectedPartners.size==0)">
+                    <span ng-show="vm.activeStep<5">Next</span>
+                    <span ng-show="vm.activeStep==5">Submit</span>
+                </md-button>
+                <md-button ng-if="isBroker" class="md-raised md-success" ng-click="vm.nextStep()" ng-disabled="(vm.activeStep==5 && !vm.timeslotSelected) || (vm.activeStep==1)">
                     <span ng-show="vm.activeStep<5">Next</span>
                     <span ng-show="vm.activeStep==5">Submit</span>
                 </md-button>
