--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -213,7 +213,10 @@ md-event-calendar .md-event-calendar-cell-event.book-appointment {
   	outline: none;
 	border: 0;
 	border: solid 1px #e7ecf1;
-  	//border: solid 2px #3aafa5;
+	 &.deactivated {
+   	border: none;
+   }
+  	
  }
 
  .partnerLogo.selected {
@@ -222,8 +225,17 @@ md-event-calendar .md-event-calendar-cell-event.book-appointment {
   	border: solid 2px #3aafa5;
  }
 
+ .partnerLogo.deactivated, .partnerLogo.selected.deactived {
+ 	outline: none;
+	border: solid 1px #e7ecf1;
+	background: #f2f2f2;
+ }
+
 .partnerLogo:hover {
    border : solid 2px #3aafa5; 
+   &.deactivated {
+   	border: none;
+   }
 }
 
 #stepper-demo.rightSideBar {
