--- a/src/app/components/main/main.scss
+++ b/src/app/components/main/main.scss
@@ -1,6 +1,31 @@
 .main-container {
 	display: flex;
 	width: 100%;
+	position: relative;
+
+	.overlay {
+		background-color: rgba(0,0,0, 0.25);
+		position: absolute;
+		top: 0;
+		right: 0;
+		left: 0;
+		bottom: 0;
+		display: flex;
+		justify-content: center;
+		z-index: 100;
+		.dialog {
+			height: 100px;
+			width:410px;
+			margin-top: 200px;
+			background-color: #fff;
+			border-radius: 3px;
+			color: #4f6379;
+			font-size: 16px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
+	}
 	.navigation {
 		display: flex;
 	}
