--- a/src/assets/styles/sass/index.scss
+++ b/src/assets/styles/sass/index.scss
@@ -51,6 +51,13 @@ table {
   flex-grow: 1;
 }
 
+.dialog-content-broker {
+   display: flex;
+    height: 50px;
+    padding: 30px;
+    justify-content: center;
+    align-items: center;
+}
 .avatar-circle
 {
     height: 40px;
