Submit, upload dialogs

--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -16,7 +16,7 @@
     <div class="right-stat" ng-if="!isBroker">
         <img style="width:250px;height:100%;position: absolute;" src="/assets/images/sidebar-background.png">
         <div style="position:absolute;right:15px;left:10px;">
-            <div><progress-display is-vertical="true"/></div>
+            <div><progress-display chart-id="brokerage-progress" is-vertical="true"/></div>
              <div class="contact-brokerage">
                 <div style="position: relative;display: flex; flex-flow: column;">
                     <h2 style="color:white;">Contact Brokerage: </h2>
