--- a/src/app/components/main/main.html
+++ b/src/app/components/main/main.html
@@ -9,8 +9,8 @@
 			<div class="dialog">
 				<div class="close" ng-click="hideDocumentPreview()" >X</div>
 				<div class="top">
-					<img ng-if="!documentPreviewLoading" ng-src="{{documentPreviewURL}}" alt="">
-					<div style="display: flex;background-color: #e5eff1;align-items: center; padding: 10px;">
+					<img ng-if="!documentPreviewLoading" class="preview" ng-src="{{documentPreviewURL}}" alt="">
+					<div ng-if="documentPreviewLoading" style="display: flex;background-color: #e5eff1;align-items: center; padding: 10px;">
 						<img src="/assets/images/loading.gif" style="margin-right: 20px;height:40px; width:40px;" alt="">
 						Please wait image is loading...
 					</div>
