--- a/src/app/components/main/main.scss
+++ b/src/app/components/main/main.scss
@@ -69,7 +69,8 @@
 				justify-content: center;
 				align-items: center;
 				img.preview {
-
+					max-width: 700px;
+					max-height: 510px;
 				}
 			}
 			.bottom {
