Adding blockchain basic behavior

--- a/src/app/components/main/blockchain/blockchain.html
+++ b/src/app/components/main/blockchain/blockchain.html
@@ -1,3 +1,8 @@
 <div class="block-chain">
-	<div class="top-bar">Block chain</div>
+	<div class="top-bar">
+		<div class="action">
+			<img src="/assets/images/expand.png" alt="Expand">
+		</div>
+		Block chain
+	</div>
 </div>
