--- a/src/app/components/main/main.scss
+++ b/src/app/components/main/main.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	width: 100%;
 	position: relative;
-
+	margin-bottom: 50px;
 	.overlay {
 		background-color: rgba(0,0,0, 0.25);
 		position: absolute;
