--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -233,12 +233,21 @@
                 <!-- <md-button class="md-raised md-edit-form" ng-click="vm.editForm()">Edit Form</md-button> -->
             </div>
             <div layout="row" class="footerBtns" layout-align="start center" ng-if="isBroker">
-                <md-button class="md-raised md-success" ng-click="vm.nextStep()">Accept</md-button>
+                <md-button class="md-raised md-success" ng-click="vm.nextRequestStep()">
+                    <span ng-show="vm.activeStep==1">Start</span>
+                    <span ng-show="vm.activeStep>1">Accept</span>
+                </md-button>
+                <md-button class="md-raised md-success" ng-click="vm.submitApplication('APPROVED')" ng-show="vm.activeStep==1" ng-disabled="!vm.allVerified">
+                    <div>Submit</div>
+                </md-button>
+                <md-button class="md-raised md-warn" ng-click="vm.submitApplication('REJECT')" ng-show="vm.activeStep==1" ng-disabled="!vm.allVerified">
+                    <div>Reject</div>
+                </md-button>
             </div>
         </footer>
 
     </div>
-    <div layout="column" class="rightSide" ng-if="isBroker" flex>
+    <div layout="column" class="rightSide" ng-if="isBroker" flex style="background: url(../../../../assets/images/broker-dashboard-background.png) no-repeat;">
         <md-event-calendar>
             <md-event-calendar-header class="md-center">
                 <md-event-calendar-prev></md-event-calendar-prev>
