--- a/src/app/components/main/blockchain/blockchain.scss
+++ b/src/app/components/main/blockchain/blockchain.scss
@@ -25,6 +25,63 @@
 			background-color: #4f6479;
 			cursor: pointer;
 			text-align: center;
+			outline: none;
+		}
+	}
+	.blocks {
+		 padding-top: 53px;
+		 padding-bottom: 10px;
+		 overflow-x: scroll;
+		 background-color: #fff;
+		.block-wrapper {
+			display: inline-block;
+			position: relative;
+			&::after{
+				content: "...";
+			    position: absolute;
+			    top: 20px;
+			    right: -12px;
+			    opacity: 0.4;
+			}
+			.info {
+			    position: absolute;
+			    border-radius: 5px;
+			    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+			    background: #ffffff;
+			    padding: 10px;
+			    text-align: center;
+			    top: -48px;
+			    width: 150px;
+			    display: none;
+			    color: rgba(70, 100, 121, 0.8);
+			    z-index: 7;
+			    left: -36px;
+			    font-size: 11px;
+				&::after {
+				  content: " ";
+				    width: 0;
+				    height: 0;
+				    top: 43px;
+				    border-left: 7px solid transparent;
+				    border-right: 7px solid transparent;
+				    border-top: 7px solid #f5f5f5;
+				    position: absolute;
+				}
+			}
+			&:hover .info{
+				display: block;
+			};
+			.block {
+				height: 60px;
+				margin-left: 12px;
+				width: 60px;
+				border: 1px solid #dae1e8;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				opacity: 0.4;
+				cursor: pointer;
+			}
 		}
 	}
 }
