--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -422,7 +422,9 @@ md-event-calendar .md-event-calendar-cell-event.book-appointment {
 	    font-size: 14px;
 	    margin-top: 15px;
 		.actnItem {
+			outline: none;
 			margin: 20px;
+			cursor: pointer;
 		}
 		.header {
 			font-size: 16px;
