Adding UI for blocks

--- a/src/app/components/main/blockchain/blockchain.scss
+++ b/src/app/components/main/blockchain/blockchain.scss
@@ -49,6 +49,7 @@
 			    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
 			    background: #ffffff;
 			    padding: 10px;
+			    padding-top: 5px;
 			    text-align: center;
 			    top: -48px;
 			    width: 150px;
