--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -1,15 +1,19 @@
 <style>
 .ticked {
     background: url(../../../../assets/images/ticked.png) no-repeat;
+    background-size: 34px;
 }
 .ticked.grey {
     background: url(../../../../assets/images/tickedgrey.png) no-repeat;
+    background-size: 34px;
 }
 .unticked {
     background: url(../../../../assets/images/unticked.png) no-repeat;
+    background-size: 34px;
 }
 .unticked.grey {
     background: url(../../../../assets/images/untickedgrey.png) no-repeat;
+    background-size: 34px;
 }
 </style>
 
