Block chain control

--- a/src/app/components/main/blockchain/blockchain.html
+++ b/src/app/components/main/blockchain/blockchain.html
@@ -10,9 +10,9 @@
 		<div ng-mouseover="vm.fetchInfo(block.number)" class="block-wrapper" ng-repeat="block in vm.currentBlocks" ng-if="$index >= vm.startFrom">
 			<div class="block">{{block.number}}</div>
 			<div class="info">
-				<div ng-if="block.date" style="padding-bottom: 5px;">Date: 06/07/2016</div>
-				<div ng-if="block.date">Type: Invocation</div>
-				<img ng-if="!block.date" style="width: 40px; height: 40px;" src="/assets/images/loading.gif" alt="">
+				<div ng-if="block.timestamp" style="padding-bottom: 5px;">Date: {{block.timestamp}}</div>
+				<div ng-if="block.timestamp">Type: Invocation</div>
+				<img ng-if="!block.timestamp" style="width: 40px; height: 40px;" src="/assets/images/loading.gif" alt="">
 			</div>
 		</div>
 	</div>
