--- a/src/app/components/main/help/help.html
+++ b/src/app/components/main/help/help.html
@@ -2,6 +2,7 @@
 	<div ng-repeat="hash in vm.hashes" class="hash">
 		<div class="top">{{hash.requestId}} {{hash.nricId}}</div>
 		<input type="text" placeholder="Enter hash value" ng-model="hash.hash">
+		<div ng-if="hash.error" class="error">Validation Un-successful!</div>
 		<a class="button" ng-click="vm.validate(hash)">Validate</a>
 	</div>
 </div>
