Changing block numbers and color

--- a/src/app/components/main/blockchain/blockchain.scss
+++ b/src/app/components/main/blockchain/blockchain.scss
@@ -77,6 +77,7 @@
 				margin-left: 12px;
 				width: 60px;
 				border: 1px solid #dae1e8;
+				background-color: #468fa8;
 				display: flex;
 				justify-content: center;
 				align-items: center;
