Color changes to block

--- a/src/app/components/main/blockchain/blockchain.scss
+++ b/src/app/components/main/blockchain/blockchain.scss
@@ -81,8 +81,8 @@
 				display: flex;
 				justify-content: center;
 				align-items: center;
-				opacity: 0.4;
 				cursor: pointer;
+				color: white;
 			}
 		}
 	}
