--- a/src/app/components/main/main.scss
+++ b/src/app/components/main/main.scss
@@ -29,7 +29,7 @@
 
 	.preview-overlay {
 		background-color: rgba(79, 99, 121, 0.78);
-		position: absolute;
+		position: fixed;
 		top: 0;
 		right: 0;
 		left: 0;
@@ -41,7 +41,7 @@
 			position: relative;
 			height: 700px;
 			width:800px;
-			margin-top: 50px;
+			margin-top: 30px;
 			background-color: #fff;
 			border-radius: 3px;
 			color: #4f6379;
@@ -72,6 +72,15 @@
 					max-width: 700px;
 					max-height: 510px;
 				}
+				&.ocr {
+					padding: 0;
+				}
+				.ocr-view {
+					display: flex;
+					flex: 1;
+					background: #fff;
+					height: 570px;
+				}
 			}
 			.bottom {
 				height: 112px;
@@ -81,6 +90,62 @@
 			    justify-content: center;
 			    text-align: center;
 			    line-height: 24px;
+			    background-color: #f5f9fa;
+			    &.ocr {
+			    	height: 130px;
+			    	justify-content: space-around;
+			    }
+			    .buttons {
+			    	display: flex;
+			    }
+			    .preview-btn {
+			    	height: 100px;
+			    	width: 100px;
+			    	border: 1px solid #3aafa5;
+			    	display: flex;
+			    	align-items: center;
+			    	border-radius: 5px;
+					justify-content: center;
+					background-color: #fff;
+					position: relative;
+					img {
+						height: 60px;
+					}
+					&.active
+					{
+						border: 2px solid #3aafa5;
+					}
+					outline: none;
+					cursor: pointer;
+					&::after {
+						content: "Preview";
+						position: absolute;
+						bottom: 3px;
+						font-size: 12px;
+					}
+			    }
+			    .ocr-btn {
+			    	position: relative;
+			    	margin-left: 15px;
+			    	height: 100px;
+			    	width: 100px;
+			    	border-radius: 5px;
+			    	border: 1px solid #3aafa5;
+			    	background-color: #fff;
+			    	display: flex;
+			    	align-items: center;
+					justify-content: center;
+					img {
+						height: 42px;
+					}
+					&.active
+					{
+						border: 2px solid #3aafa5;
+					}
+					outline: none;
+					cursor: pointer;
+			    }
+
 			}
 		}
 	}
